syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jooms.tickettracker";
option java_outer_classname = "TicketTrackerService";
// option objc_class_prefix = "RTG";

package tickettracker;

// Interface exported by the server.
service TicketTracker {
    rpc SayHello(HelloMessage) returns (GoodbyeMessage) {}
}
message HelloMessage {
    string text = 1;
}

message GoodbyeMessage {
    string text = 1;
}